# owner_manager_project

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.front  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-back.txt  requirements-front.txt
.streamlit/: config.toml
backend/: main.py
backend/interfaces/: database.py
backend/libs/api/: __init__.py  api_handler.py  auth.py
backend/libs/db/: __init__.py  db_handler.py
backend/middlewares/: auth.py
backend/modules/owner/: ext.py  models.py  repository.py  schemas.py
backend/modules/owner/controllers/: __init__.py  car.py  owner.py
backend/modules/user/: controller.py  ext.py  models.py  repository.py  schemas.py
backend/utils/: __init__.py  bootstrap.py  crypt.py  email_validator.py  get_doc.py  http_exception.py
tests/: conftest.py  test_owner.py
www/: index.py
www/components/: __init__.py  car_card.py  owner_card.py
www/libs/: page.py
www/pages/: about_owner.py  home.py  login.py  register_car.py  register_owner.py
www/utils/: __init__.py  disable_sidebar.py  make_request.py  verify_if_auth.py
