[tool.poetry]
name = "advice-health-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.backend.dependencies]
flask = "^2.2.3"
sqlmodel = "^0.0.8"
pytest = "^7.2.2"
flask-pydantic-openapi = "^0.4.2"
argon2-cffi = "^21.3.0"
pyjwt = "^2.6.0"
waitress = "^2.1.2"
flask-pydantic = "^0.11.0"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.21.0"
requests = "^2.28.2"
streamlit-extras = "^0.2.7"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
